--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -6,8 +6,7 @@ setup:
 
 install:
 	# This should be run from inside a virtualenv
-	pip install --upgrade pip &&\
-		pip install -r requirements.txt
+	pip install --upgrade pip
 
 test:
 	# Additional, optional, tests could go here
